{
    "name": "ControlMap",
    "maps": [
        {
            "name": "JetEngine",
            "id": "cfed0506-cf36-42c5-8ee4-dc273547e37b",
            "actions": [
                {
                    "name": "ThrottleUp",
                    "type": "Button",
                    "id": "88ddfbc5-a03f-41e5-b39f-23212d0ea5f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleDown",
                    "type": "Button",
                    "id": "3e220b57-a53b-4fef-b5cb-4c44ba1b481a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleStepUp",
                    "type": "Button",
                    "id": "506d690e-bcdc-4cf5-a041-05a685579042",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThrottleStepDown",
                    "type": "Button",
                    "id": "577a78f4-a6c8-420d-8a5f-4d91ea7ef2d2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleAB",
                    "type": "Button",
                    "id": "c2b883c5-7a69-42f9-8609-67f6f0feafc2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ca9a66c-d279-437e-adbc-02e6b2b2f588",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77ac7bf7-fb8a-462c-8de8-0005e17da461",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6b21620-4150-42c2-aa68-6cdfd7eb80ba",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleStepUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39eff000-1088-4096-a43d-e6b3c4899caa",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrottleStepDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24921f61-2e77-4711-9084-e73661e73fe4",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleAB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}